Refactor Jenkinsfile and Dockerfile for improved build process; update Maven version in pom.xml